# but-what-about

./: Cargo.toml  README.md
benches/: but_what_about.rs  heap_permute.rs
src/: heap.rs  iterator.rs  lib.rs  permutable.rs
