[package]
name = "heap-permute"
version = "0.1.0"
authors = ["micron-mushroom <micron.mushroom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "heap_permute"
harness = false