[package]
name = "but-what-about"
version = "0.1.0"
authors = ["micron-mushroom <micron.mushroom@gmail.com>"]
edition = "2018"

license = "MIT"
keywords = ["permutations", "permutation", "permute"]
categories = ["algorithms"]
description = "A permutation & combination calculation crate for rust."
repository = "https://github.com/micron-mushroom/but-what-about"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation =  { version = "1.7.1", optional = true }

[features]
grapheme = ["unicode-segmentation"]

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "but_what_about"
harness = false